# Zeke

./: .env.docker.example  .env.example  .env.schema  .gitattributes  .gitignore  .replit  5_IMPROVEMENTS.md  AGENTS.md  ANDROID_INTEGRATION.md  BACKEND_IMPROVEMENTS.md  CLAUDE.md  Dockerfile  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  KG_AUDIT_REPORT.md  KG_QUICK_START.md  KNOWLEDGE_GRAPH.md  MOBILE_FIRST_REDESIGN.md  QUICKSTART.md  README_DOWNLOAD_EVERYTHING.md  TOP_3_ZEKE_IMPROVEMENTS.md  UI_CHANGES.md  canvas-ui-setup.md  capacitor.config.ts  docker-compose.yml  package-lock.json  package.json  pyproject.toml  replit.md  test-export.mjs  tsconfig.json  tsconfig.typecheck.json  vitest.config.ts  zeke.db  zeke.db-journal  zeke_knowledge.md  zeke_profile.md  zekeapp_deploy_key  zekeapp_deploy_key.pub
.aoa/: home.json
android/: .easignore  .replit  ARCHITECTURE.md  CLAUDE.md  MONOREPO_SETUP.md  QA_REPORT_PHASE3_SPEAKER_DIARIZATION.md  SECURITY_AUDIT_BACKEND_COORDINATION.md  SECURITY_SPRINT_MOBILE_APP.md  SYNC_GUIDE.md  SYNC_TEST.md  TESTING.md  ZEKE_BACKEND_FIX_PROMPT.md  app.config.js  app.json  babel.config.js  build-android.sh  capacitor.settings.gradle  design_guidelines.md  eas.json  google-services.json  jest.config.js  jest.setup.js  metro.config.js  package-lock.json  package.json  replit.md  tsconfig.json
attached_assets/: Pasted--ZEKE-Backend-API-Specification-Overview-The-ZEKE-Mobil_1767197474503.txt  Pasted--ZEKE-Backend-Issue-Chat-API-Endpoint-api-conversations_1766062810439.txt  branding-1764695360491.json  branding-1765394454207.json  (+33 more)
(+875 files in other folders)
