[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "alpaca-py>=0.43.2",
    "openai>=1.60.2",
    "fastapi>=0.122.0",
    "httpx>=0.28.1",
    "mcp>=1.23.3",
    "openai-agents>=0.6.1",
    "plotly>=6.5.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
    "streamlit>=1.52.2",
    "urllib3>=2.6.1",
    "uvicorn[standard]>=0.38.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests/agent_tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
